test/Neg/termina/binary/binary_op_type_mismatch.fin
function test0() {

    let foo : u32 = 0;
    let bar : u16 = 10;

    let baz : u32 = (foo + bar) as u32;

    return;
}
